# style-guide-agent

style_guide_gen/: .gitignore  README.md  main.py  pov.md  pyproject.toml  style_guide.db  style_guide_tables.sql  whitepaper.md
style_guide_gen/crew_flow/: crew.py  flow.py
style_guide_gen/crew_flow/api/: api.py
style_guide_gen/crew_flow/api/routers/: style_guide.py
style_guide_gen/knowledge/: db_knowledge.py
style_guide_gen/style_guide_gen/: crew.py  schemas.py
style_guide_gen/style_guide_gen/api/routers/: style_guide.py
style_guide_gen/tests/: flow_mock.py  test_flow.py  test_flow_demo.py  test_flow_mock.py  test_flow_real.py  test_flow_simple.py
